(rule
  (with-outputs-to test01.out
  (with-accepted-exit-codes 0
    (run bash -c "cat %{dep:test01.in} | %{exe:../cfg2pda.exe}")
)))

(rule
  (alias runtest)
  (action (diff test01.exp test01.out))
)

(rule
  (with-outputs-to test02.out
  (with-accepted-exit-codes 0
    (run bash -c "cat %{dep:test02.in} | %{exe:../cfg2pda.exe}")
)))

(rule
  (alias runtest)
  (action (diff test02.exp test02.out))
)

(rule
  (with-outputs-to test03.out
  (with-accepted-exit-codes 0
    (run bash -c "cat %{dep:test03.in} | %{exe:../cfg2pda.exe}")
)))

(rule
  (alias runtest)
  (action (diff test03.exp test03.out))
)

(rule
  (with-outputs-to test04.out
  (with-accepted-exit-codes 0
    (run bash -c "cat %{dep:test04.in} | %{exe:../cfg2pda.exe}")
)))

(rule
  (alias runtest)
  (action (diff test04.exp test04.out))
)